Initial commit, move files old template to this

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -4,5 +4,13 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  text-decoration: none;
+  color: #222222;
+}
+
+.bungalow{
+  border: 3px solid;
+  border-radius: 8px;
+  margin-bottom: 8px;
+  padding: 8px;
 }
