--- a/src/views/bungalows.pug
+++ b/src/views/bungalows.pug
@@ -5,7 +5,7 @@ block content
   h2 Here are some lovely bungalows
   each bungalow in bungalows
     .bungalow
-      form(action=`/bungalows/${bungalow.id}`, method='get')
+      form(action=`/bungalows/${bungalow.id}`, method='post')
 
         a(href=`/bungalows/${bungalow.id}`)
           h3 Bungalow #{bungalow.name}
