Fix booking date bug

--- a/src/views/bookings.pug
+++ b/src/views/bookings.pug
@@ -8,10 +8,10 @@ block content
   else
     each booking in user.bookings
         h3 #{booking.bungalow.name} - #{booking.bungalow.location}
-        p #{booking.checkInDate.getMonth()+1}/#{booking.checkInDate.getDay()}/#{booking.checkInDate.getFullYear()} - #{booking.checkOutDate.getMonth()+1}/#{booking.checkOutDate.getDay()}/#{booking.checkOutDate.getFullYear()}
+        p #{booking.checkInDate.getMonth()+1}/#{booking.checkInDate.getDate()}/#{booking.checkInDate.getFullYear()} - #{booking.checkOutDate.getMonth()+1}/#{booking.checkOutDate.getDate()}/#{booking.checkOutDate.getFullYear()}
         p #{booking.bookingDays.length} nights stand
         p Total amount #{booking.totalPrice} TRY
-        form(action=`/bookings/${bookingId}`, method='delete')
+        form(action=`/bookings/${bookingId}`, method='patch')
           input(type="submit", value="Cancel booking")
 
         //- TODO: Add isReviewed section
